force-app/main/default/objects/Branch__c/fields/Assistant_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistant Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_Assistant_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>