force-app/main/default/objects/Branch__c/fields/Branch_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Branch_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_Supervisor</relationshipName>
    <type>Lookup</type>
</CustomField>