force-app/main/default/objects/Branch__c/fields/Parent_Asset__c.field-meta.xml
<CustomField>
    <fullName>Parent_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Bank Locations</relationshipLabel>
    <relationshipName>Bank_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>