force-app/main/default/objects/Branch__c/fields/Parent_Branch__c.field-meta.xml
<CustomField>
    <fullName>Parent_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>