force-app/main/default/objects/Branch__c/fields/Retail__c.field-meta.xml
<CustomField>
    <fullName>Retail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retail</label>
    <type>Checkbox</type>
</CustomField>