force-app/main/default/objects/Branch__c/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Location_Secondary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>