force-app/main/default/objects/Branch__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
            <value>
                <fullName>Serviced Office</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
                <isActive>false</isActive>
                <label>Virtual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>