force-app/main/default/objects/Branch__c/recordTypes/Physical_Branch.recordType-meta.xml
<RecordType>
    <fullName>Physical_Branch</fullName>
    <active>true</active>
    <label>Physical Branch</label>
</RecordType>