force-app/main/default/objects/Branch__c/recordTypes/Physical_Office.recordType-meta.xml
<RecordType>
    <fullName>Physical_Office</fullName>
    <active>true</active>
    <label>Physical Office</label>
</RecordType>