force-app/main/default/objects/Branch__c/recordTypes/Virtual_Branch.recordType-meta.xml
<RecordType>
    <fullName>Virtual_Branch</fullName>
    <active>true</active>
    <label>Virtual Branch</label>
</RecordType>