force-app/main/default/objects/Branch__c/recordTypes/Virtual_Office.recordType-meta.xml
<RecordType>
    <fullName>Virtual_Office</fullName>
    <active>true</active>
    <label>Virtual Office</label>
</RecordType>