force-app/main/default/objects/Branch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Branch_Manager__c</columns>
    <columns>Branch_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Phone__c</columns>
    <columns>Parent_Branch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>