force-app/main/default/objects/Branch__c/listViews/All_Active_Branches.listView-meta.xml
<ListView>
    <fullName>All_Active_Branches</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Branch_Manager__c</columns>
    <columns>Branch_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Phone__c</columns>
    <columns>Parent_Branch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Branches</label>
</ListView>